# libblas

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  appveyor.yml  bors.toml
.circleci/: config.yml
benches/: accelerate.rs  bench.rs
benches/fixtures/: complex.rs  mod.rs
benches/level1/: complex.rs  mod.rs
benches/level2/: complex.rs  mod.rs
benches/level3/: complex.rs  mod.rs
scripts/: codecov.sh  conformance.sh
src/: lib.rs
src/level1/: complex.rs  mod.rs
src/level2/: complex.rs  mod.rs
src/level3/: complex.rs  mod.rs
src/matrix/: complex.rs
src/unstable/: mod.rs
src/unstable/level1/: mod.rs
src/unstable/matrix/: mod.rs
tests/: conformance.rs  level1_complex_test.rs  level1_test.rs  level2_complex_test.rs  level2_test.rs  level3_complex_test.rs  level3_test.rs
tests/case/: complex.rs  mod.rs
tests/conformance/level1/asum/: fixture.f90
tests/conformance/level1/axpy/: fixture.f90
tests/conformance/level1/complex/asum/: fixture.f90
tests/conformance/level1/complex/axpy/: fixture.f90
tests/conformance/level1/complex/copy/: fixture.f90
tests/conformance/level1/complex/dotc/: fixture.f90
tests/conformance/level1/complex/dotu/: fixture.f90
tests/conformance/level1/complex/iamax/: fixture.f90
tests/conformance/level1/complex/nrm2/: fixture.f90
tests/conformance/level1/complex/rot/: fixture.f90
tests/conformance/level1/complex/rotg/: fixture.f90
tests/conformance/level1/complex/scal/: fixture.f90
tests/conformance/level1/complex/sscal/: fixture.f90
tests/conformance/level1/complex/swap/: fixture.f90
tests/conformance/level1/copy/: fixture.f90
tests/conformance/level1/ddot/: fixture.f90
tests/conformance/level1/dot/: fixture.f90
tests/conformance/level1/iamax/: fixture.f90
tests/conformance/level1/nrm2/: fixture.f90
tests/conformance/level1/rot/: fixture.f90
tests/conformance/level1/rotg/: fixture.f90
tests/conformance/level1/rotm/: fixture.f90
tests/conformance/level1/rotmg/: fixture.f90
tests/conformance/level1/scal/: fixture.f90
tests/conformance/level1/swap/: fixture.f90
tests/conformance/level2/complex/gbmv/: fixture.f90
tests/conformance/level2/complex/gemv/: fixture.f90
tests/conformance/level2/gbmv/: fixture.f90
tests/conformance/level2/gemv/: fixture.f90
tests/conformance/level2/ger/: fixture.f90
tests/conformance/level2/sbmv/: fixture.f90
tests/conformance/level2/spmv/: fixture.f90
tests/conformance/level2/spr/: fixture.f90
tests/conformance/level2/spr2/: fixture.f90
tests/conformance/level2/symv/: fixture.f90
tests/conformance/level2/syr/: fixture.f90
tests/conformance/level2/syr2/: fixture.f90
tests/conformance/level2/tbmv/: fixture.f90
tests/conformance/level2/tbsv/: fixture.f90
tests/conformance/level2/tpmv/: fixture.f90
tests/conformance/level2/tpsv/: fixture.f90
tests/conformance/level2/trmv/: fixture.f90
tests/conformance/level2/trsv/: fixture.f90
tests/conformance/level3/gemm/: fixture.f90
tests/conformance/level3/symm/: fixture.f90
tests/conformance/level3/syr2k/: fixture.f90
tests/conformance/level3/syrk/: fixture.f90
tests/conformance/level3/trmm/: fixture.f90
tests/conformance/level3/trsm/: fixture.f90
tests/conformance/matrix/: pack.f90  slice.f90
tests/fixtures/: mod.rs
tests/utils/: mod.rs
(+24 files in other folders)
