[package]
authors = ["Benjamin Schultzer <benjamin@schultzer.com>"]
description = "BLAS implementation for Rust"
documentation = "https://crate.io/libblas"
keywords = ["blas", "basic linear algebra subprograms", "linear algebra", "mathematics", "machine learning"]
categories = ["algorithms", "machine learning", "science"]
license = "MIT/Apache-2.0"
name = "libblas"
repository = "https://github.com/schultzer/libblas"
version = "0.1.0"
readme = "README.md"
edition = "2018"


[workspace]
members = []
[badges]
circle-ci = { repository = "schultzer/libblas", branch = "master" }

[dependencies]
num-complex = "0.2"
num-traits = "0.2"

[dev-dependencies]
num-complex = { version = "0.2", features = ["serde"] }
criterion = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
blas = "0.19"

[target.'cfg(macos)'.dev-dependencies]
 blas-src = { version = "0.2", features = ["accelerate"] }

[target.'cfg(linux)'.dev-dependencies]
 blas-src = { version = "0.2", features = ["openblas"] }

[[bench]]
name = "accelerate"
harness = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false