[package]
authors = ["Benjamin Schultzer <benjamin@schultzer.com>"]
description = "BLAS implementation for Rust"
documentation = "https://crate.io/libblas"
keywords = ["blas", "basic linear algebra subprograms", "linear algebra", "mathematics", "machine learning"]
categories = ["algorithms", "machine learning", "science"]
license = "MIT/Apache-2.0"
name = "libblas"
repository = "https://github.com/schultzer/libblas"
version = "0.1.0"
readme = "README.md"
edition = "2018"


[workspace]
members = []
[badges]
circle-ci = { repository = "schultzer/libblas", branch = "master" }

[dependencies]
num-complex = "0.2"
num-traits = "0.2"

[dev-dependencies]
num-complex = { version = "0.2", features = ["serde"] }
rand = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false